# ai-summarizer

./: .dockerignore  .env.example  .envprod  .gitignore  Cargo.toml  Dockerfile  README.md  summaries.json
.github/workflows/: build-and-test.yml  deploy.yml
src/: backoff.rs  config.rs  db.rs  google_chat.rs  hn_api.rs  lints.rs  main.rs  openai.rs  scraper.rs
src/examples/: Where-is-London's-most-central-sheep?.txt  Why-is-Big-Tech-hellbent-on-making-AI-opt-out?.txt  stories.json  story_without_url.json
src/openai/: mod.rs  summarizer.rs  title_categorical_scoring.rs  title_numerical_scoring.rs
src/queries/: google_chat.rs  mod.rs  openai.rs  summarizer.rs  title_categorical_scoring.rs  title_numerical_scoring.rs
